wrapped figures in anchor tag and fixed caption positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ nav a {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.container figure {
+.container a {
     flex: 1 0 30%;
     margin: 10px 10px 5px 10px;
     height: 150px;
@@ -155,10 +155,10 @@ figcaption {
     display: inline-block;
     padding: 15px;
     position: relative;
-    top: 40%;
+    top: 60px;
 }
-#big-caption {
-    top: 74.5%;
+#project-1 figcaption {
+    top: 250px;
 }
 
 /* contact me section */
@@ -199,7 +199,12 @@ figcaption {
     padding: 0 10px 5px 10px;
 }
 
+/* media queries and hover effects */
+.container a:hover {
+    border-color: orange;
+    color: darkslategray;
 
+}
 
 @media screen and (max-width: 768px) {
     
@@ -244,7 +249,7 @@ figcaption {
         margin: 0;
         padding: 0;
     }
-    .container figure {
+    .container a {
         flex: 1 0 100%;
         margin-bottom: 20px;
         padding: 50px;
